Version 2.1.2
-----------------------------------------------------
27 July 2007
+ Boost now expects the javascript directory to be writable as
  well as the module directory.
+ Added inBranch function for modules

8 June 2007
+ Locale file updated

1 June 2007
+ RFE #1720749 - Boost now detects and warns users of old module
  installs.
+ Updated files: templates/module_list.tpl

Version 2.1.1
------------------------------------------------------
15 May 2007
+ Boost now warns users of Core update.

Version 2.1.0
------------------------------------------------------
19 April 2007
+ RFE 1680787 - Boost module list shows full package title
+ updated files: templates/module_list.tpl

13 April 2007
+ Added code to create missing directories in updateFiles

6 April 2007
+ Bug #1695102 - Added permission check before each module install or
  update.
+ Increase edit popup window height slightly
+ Added currentDone function.

4 April 2007
+ Added German files
+ Changed over to new language format

6 March 2007
+ Removed referenced constructor

5 March 2007
+ Changed control panel icon
+ Changed backLink call to definite url to prevent loops.
+ Added ability to uninstall a module despite dependency settings.


Version 2.0.0
------------------------------------------------------

19 February 2007
+ Reduced translate calls.

15 February 2007
+ Added translate functions

9 January 2007
+ Boost now reports on the directories it deletes.
+ Boost now only deletes image and file directories if defined on install.

8 December 2006
+ Added error check for version checking Bug #1606366

Version 1.9.9
------------------------------------------------------
30 November 2006
+ Added link to check all modules for updates at once.
+ Updated file templates/module_list.tpl

29 November 2006
+ Changed updateFiles to return false even with a an error. Now logs
  the error instead of returning it.

Version 1.9.8
------------------------------------------------------
28 November 2006